--- a/wine/src/main/resources/templates/areaAdministrativa/login.html
+++ b/wine/src/main/resources/templates/areaAdministrativa/login.html
@@ -13,8 +13,8 @@
             img src="">
         </div>
 
-        <form method="POST">
-            <input type="text" name="nome" placeholder="nome de usuario" autofocus>
+        <form action="/acessarAreaAdministrativa" method="POST">
+            <input type="text" name="email" placeholder="nome de usuario" autofocus>
             <input type="password" name="senha" placeholder="sua senha">
             <input type="submit" value="entrar">
         </form>
