--- a/wine/src/main/resources/templates/admin/edit.html
+++ b/wine/src/main/resources/templates/admin/edit.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/admin/fragmentos :: head('Editar Usuario #')}"></head>
 <body>
-<header th:replace="~{/admin/fragmentos :: header('Editar Usuario #')}"></header>
+<header th:replace="~{/admin/fragmentos :: header('Editar Usuario # '+ ${usuarioId})}"></header>
 <div class="container">
-    <form th:object="${requisicaoNovoUsuarioDTO}" action="/usuarios" method="POST">
+    <form th:object="${requisicaoNovoUsuarioDTO}" th:action="@{/usuarios/{usuarioId}(usuarioId = ${usuario.id})}" method="POST">
         <div class="form-group">
             <label class="form-label">CPF</label>
             <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{cpf}">
@@ -25,13 +25,13 @@
             <input type="password" class="form-control"  th:errorclass="is-invalid" th:field="*{senha}">
             <div class="invalid-feedback" th:errors="*{senha}"></div>
         </div>
-<!--        <div class="form-group">-->
-<!--            <label class="form-label">Situação</label>-->
-<!--            <select class="form-select" th:field="*{situacao}">-->
-<!--                <option th:each="situacao : ${situacoes}" th:value="${situacao}" th:text="${situacao}"></option>-->
-<!--            </select>-->
-<!--            <div class="invalid-feedback"></div>-->
-<!--        </div>-->
+        <!--        <div class="form-group">-->
+        <!--            <label class="form-label">Situação</label>-->
+        <!--            <select class="form-select" th:field="*{situacao}">-->
+        <!--                <option th:each="situacao : ${situacoes}" th:value="${situacao}" th:text="${situacao}"></option>-->
+        <!--            </select>-->
+        <!--            <div class="invalid-feedback"></div>-->
+        <!--        </div>-->
         <div class="form-group">
             <label class="form-label">Grupo</label>
             <select class="form-select" th:field="*{grupo}">
