--- a/wine/src/main/resources/templates/admin/index.html
+++ b/wine/src/main/resources/templates/admin/index.html
@@ -32,7 +32,7 @@
                     <td class="col-4" th:text="${usuario.grupo.toString()}">#</td>
 <!--                    <td class="col-2" th:text="${usuario.cpf}">#</td>-->
 <!--                    <td class="col-2 hidetext" th:text="${usuario.senha}">#</td>-->
-                    <td class="col-1"><a href="#"> Editar</a></td>
+                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/edit(usuarioId = ${usuario.id})}"> Editar</a></td>
                     <td class="col-1"><a href="#"> Inativar</a></td>
                 </tr>
                 </tbody>
