--- a/wine/src/main/resources/static/admin/css/style.css
+++ b/wine/src/main/resources/static/admin/css/style.css
@@ -26,7 +26,7 @@ body {
     color: var(--text-color);
 }
 header{
-    position: fixed;
+   /* position: fixed; */
     width: 100%;
     right: 0;
     top: 0;
