Log in funfando

--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -24,7 +24,7 @@
     <div class="header-icon">
         <i class='bx bx-search' id="search-icon"></i>
         <i class='bx bxs-cart-alt' ><span>0</span></i>
-        <i class='bx bx-power-off' ></i>
+        <a href="/loginAdministrativo"><i class='bx bx-power-off' ></i></a>
     </div>
 
     <div class="search-box">
