--- a/wine/src/main/resources/templates/admin/edit.html
+++ b/wine/src/main/resources/templates/admin/edit.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/admin/fragmentos :: head('Editar Usuario #')}"></head>
+<head th:replace="~{/admin/fragmentos :: head}"></head>
 <body>
-<header th:replace="~{/admin/fragmentos :: header('Editar Usuario # '+ ${usuarioId})}"></header>
+<header th:replace="~{/admin/fragmentos :: header}"></header>
 <div class="container">
     <form th:object="${requisicaoNovoUsuarioDTO}" th:action="@{/usuarios/{usuarioId}(usuarioId = ${usuario.id})}" method="POST">
         <div class="form-group">
