Realizando alterações voltadas para inativação/edição de usuário.

--- a/wine/src/main/resources/templates/admin/new.html
+++ b/wine/src/main/resources/templates/admin/new.html
@@ -32,7 +32,7 @@
             </select>
             <div class="invalid-feedback"></div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
 </div>
 </body>
