--- a/wine/src/main/resources/templates/admin/edit.html
+++ b/wine/src/main/resources/templates/admin/edit.html
@@ -7,12 +7,12 @@
     <form th:object="${requisicaoNovoUsuarioDTO}" th:action="@{/usuarios/{usuarioId}(usuarioId = ${usuario.id})}" method="POST">
         <div class="form-group">
             <label class="form-label">CPF</label>
-            <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{cpf}">
+            <input class="form-control" readonly="true" th:errorclass="is-invalid" type="text" th:field="*{cpf}">
             <div class="invalid-feedback" th:errors="*{cpf}"></div>
         </div>
         <div class="form-group">
-            <label class="form-label">E-mail</label>
-            <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{email}">
+            <label class="form-label" >E-mail</label>
+            <input class="form-control" readonly="true" errorclass="is-invalid" type="text" th:field="*{email}">
             <div class="invalid-feedback" th:errors="*{email}"></div>
         </div>
         <div class="form-group">
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label class="form-label">Senha</label>
-            <input type="password" class="form-control"  th:errorclass="is-invalid" th:field="*{senha}">
+            <input type="password" class="form-control" th:errorclass="is-invalid" th:field="*{senha}">
             <div class="invalid-feedback" th:errors="*{senha}"></div>
         </div>
         <div class="form-group">
