--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -16,7 +16,7 @@
         <ul class="navbar">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-            <li class="nav-item"><a class="nav-link" href="#produtos">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
             <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>
             <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
         </ul>
