--- a/wine/src/main/resources/templates/admin/index.html
+++ b/wine/src/main/resources/templates/admin/index.html
@@ -30,8 +30,8 @@
                     <td class="col-2" th:text="${usuario.email}">#</td>
                     <td class="col-2" th:text="${usuario.situacao.toString()}">#</td>
                     <td class="col-4" th:text="${usuario.grupo.toString()}">#</td>
-<!--                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/edit(usuarioId = ${usuario.id})}"> Editar</a></td>-->
-<!--                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/inativar(usuarioId = 2}">Inativar</a></td>-->
+                    <!--                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/edit(usuarioId = ${usuario.id})}"> Editar</a></td>-->
+                    <!--                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/inativar(usuarioId = 2}">Inativar</a></td>-->
                     <td class="col-1">
                         <form action="#" th:action="@{/usuarios/__${usuario.id}__/editar}" method="get">
                             <button type="submit" class="btn btn-link">Editar</button>
@@ -48,7 +48,10 @@
         </div>
     </div>
     <div class="row">
-        <a href="/usuarios/new">Novo usuário</a>
+        <!--        <a href="/usuarios/new">Novo usuário</a>-->
+        <form action="#" th:action="@{usuarios/new}" method="get">
+            <button type="submit" class="btn btn-link">Novo usuário</button>
+        </form>
     </div>
 </div>
 </body>
