--- a/wine/src/main/resources/templates/admin/index.html
+++ b/wine/src/main/resources/templates/admin/index.html
@@ -30,16 +30,17 @@
                     <td class="col-2" th:text="${usuario.email}">#</td>
                     <td class="col-2" th:text="${usuario.situacao.toString()}">#</td>
                     <td class="col-4" th:text="${usuario.grupo.toString()}">#</td>
-                    <!--                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/edit(usuarioId = ${usuario.id})}"> Editar</a></td>-->
-                    <!--                    <td class="col-1"><a th:href="@{/usuarios/{usuarioId}/inativar(usuarioId = 2}">Inativar</a></td>-->
                     <td class="col-1">
                         <form action="#" th:action="@{/usuarios/__${usuario.id}__/editar}" method="get">
                             <button type="submit" class="btn btn-link">Editar</button>
                         </form>
                     </td>
                     <td class="col-1">
-                        <form action="#" th:action="@{/usuarios/__${usuario.id}__/inativar}" method="get">
+                        <form th:if="${usuario.situacao.toString() == 'ATIVO'}" action="#" th:action="@{/usuarios/__${usuario.id}__/inativar}" method="get">
                             <button type="submit" class="btn btn-link">Inativar</button>
+                        </form>
+                        <form th:if="${usuario.situacao.toString() == 'INATIVO'}" action="#" th:action="@{/usuarios/__${usuario.id}__/ativar}" method="get">
+                            <button type="submit" class="btn btn-link">Ativar</button>
                         </form>
                     </td>
                 </tr>
