--- a/wine/src/main/resources/templates/admin/edit-produto.html
+++ b/wine/src/main/resources/templates/admin/edit-produto.html
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
       <label class="form-label">Descricao</label>
-      <input class="form-control" th:errorclass="is-invalid" type="text" min="0" max="2000" th:field="*{descri}">
+      <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descri}"></textarea>
       <div class="invalid-feedback" th:errors="*{descri}"></div>
     </div>
     <div class="form-group">
@@ -29,7 +29,7 @@
     </div>
     <div class="form-group">
       <label class="form-label">Preco</label>
-      <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" min="0" max="1000" th:field="*{preco}">
+      <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" onchange="setTwoNumberDecimal" min="0" max="1000" step="0.25" value="0.00" th:field="*{preco}">
       <div class="invalid-feedback" th:errors="*{preco}"></div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
