--- a/wine/src/main/resources/templates/admin/indexProduto.html
+++ b/wine/src/main/resources/templates/admin/indexProduto.html
@@ -36,6 +36,11 @@
             </form>
           </td>
           <td class="col-1">
+            <form action="#" th:action="@{/produtos/__${produto.cod}__/deletar}" method="get">
+              <button type="submit" class="btn btn-link">Deletar</button>
+            </form>
+          </td>
+          <td class="col-1">
         </tr>
         </tbody>
         <!--    Nome, email, status, Grupo-->
