--- a/wine/src/main/resources/templates/admin/novo-produto.html
+++ b/wine/src/main/resources/templates/admin/novo-produto.html
@@ -18,41 +18,49 @@
             <div class="invalid-feedback"></div>
         </div>
         <div class="form-group">
+            <label class="form-label">Avaliação</label>
+            <div class="rating-slider">
+                <input type="range" min="0" max="10" value="0" class="slider" id="myRange" th:field="*{avaliacao}">
+                <span class="rating-value" id="demo"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="form-label">Descricao</label>
-            <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descri}"></textarea>
-            <div class="invalid-feedback" th:errors="*{descri}"></div>
+            <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descricao}"></textarea>
+            <div class="invalid-feedback" th:errors="*{descricao}"></div>
         </div>
         <div class="form-group">
             <label class="form-label">Quantidade</label>
-            <input class="form-control" th:errorclass="is-invalid" type="number" name="quantidade" min="0" max="100" th:field="*{qtde}">
-            <div class="invalid-feedback" th:errors="*{qtde}"></div>
+            <input class="form-control" th:errorclass="is-invalid" type="number" name="quantidade" min="0" max="100" th:field="*{quantidade}">
+            <div class="invalid-feedback" th:errors="*{quantidade}"></div>
         </div>
         <div class="form-group">
             <label class="form-label">Preco</label>
-            <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" onchange="setTwoNumberDecimal" min="0" max="1000" step="0.25" value="0.00" th:field="*{preco}">
+            <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" onchange="setTwoNumberDecimal" min="0" max="1000" step="0.1" value="0.00" th:field="*{preco}">
             <div class="invalid-feedback" th:errors="*{preco}"></div>
         </div>
-        <!--        <div class="form-group">-->
-        <!--            <label class="form-label">Situação</label>-->
-        <!--            <select class="form-select" th:field="*{situacao}">-->
-        <!--                <option th:each="situacao : ${situacoes}" th:value="${situacao}" th:text="${situacao}"></option>-->
-        <!--            </select>-->
-        <!--            <div class="invalid-feedback"></div>-->
-        <!--        </div>-->
+        <div class="form-group">
+            <label class="form-label">Imagens</label>
+            <input class="form-control" type="file" name="imagens" multiple th:field="*{imagens}">
+            <div class="invalid-feedback"></div>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
+<script>
+        var slider = document.getElementById("myRange");
+        var output = document.getElementById("demo");
+        output.innerHTML = slider.value / 2;
+
+        slider.oninput = function() {
+            output.innerHTML = this.value / 2;
+        }
+    </script>
+<script>
+    function previewImage(event) {
+        var preview = document.getElementById("preview");
+        preview.src = URL.createObjectURL(event.target.files[0]);
+    }
+</script>
 </body>
 </html>
-
-<!--| Field    | Type         | Null | Key | Default | Extra          |-->
-<!--+&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+&#45;&#45;&#45;&#45;&#45;&#45;+-&#45;&#45;&#45;&#45;+-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+-->
-<!--| id       | bigint       | NO   | PRI | NULL    | auto_increment |-->
-<!--| cargo    | varchar(255) | NO   |     | NULL    |                |-->
-<!--| cpf      | varchar(255) | NO   | UNI | NULL    |                |-->
-<!--| email    | varchar(255) | NO   | UNI | NULL    |                |-->
-<!--| nome     | varchar(255) | NO   |     | NULL    |                |-->
-<!--| senha    | varchar(255) | NO   |     | NULL    |                |-->
-<!--| situacao | varchar(255) | NO   |     | NULL    |                |-->
-<!--| grupo    | varchar(255) | NO   |     | NULL    |                |-->
-<!--+&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+&#45;&#45;&#45;&#45;&#45;&#45;+-&#45;&#45;&#45;&#45;+-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;+-->
