--- a/wine/src/main/resources/templates/admin/edit-produto.html
+++ b/wine/src/main/resources/templates/admin/edit-produto.html
@@ -41,7 +41,7 @@
     </div>
     <div class="form-group">
       <label class="form-label">Imagens</label>
-      <input class="form-control" type="file" name="imagens" multiple th:field="*{imagens}">
+      <input class="form-control" type="file" name="imagens" multiple>
       <div class="invalid-feedback"></div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
