--- a/wine/src/main/resources/templates/admin/indexProduto.html
+++ b/wine/src/main/resources/templates/admin/indexProduto.html
@@ -7,6 +7,14 @@
   <div class="row">
   </div>
   <div class="row">
+    <form action="#" th:action="@{/produtos/buscar}" method="get">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Pesquisar produto por nome" name="nome">
+        <div class="input-group-append">
+          <button type="submit" class="btn btn-outline-secondary">Buscar</button>
+        </div>
+      </div>
+    </form>
     <div class="col-12">
       <table class="table table-hover">
         <thead>
