--- a/wine/src/main/resources/templates/admin/indexProduto.html
+++ b/wine/src/main/resources/templates/admin/indexProduto.html
@@ -36,6 +36,7 @@
           <th class="col-1" scope="row" th:text="${produto.getCodigo()}">#</th>
           <td class="col-2" th:text="${produto.nome}">#</td>
           <td class="col-2" th:text="${produto.tipo.toString()}">#</td>
+          <td class="col-2" th:text="${produto.avaliacao}">#</td>
           <td class="col-2" th:text="${produto.descricao}">#</td>
           <td class="col-4" th:text="${produto.quantidade}">#</td>
           <td class="col-4" th:text="${produto.preco}">#</td>
