--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -9,15 +9,16 @@
 </head>
 
 <header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
-    <a href="#" class="logo"><i class='bx bxs-wine'></i>Wine Store</a>
+    <a href="/" class="logo"><i class='bx bxs-wine'></i>Wine Store</a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
     <div class="container">
         <ul class="navbar">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+<!--            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>-->
             <li class="nav-item"><a class="nav-link" href="/loja">Loja</a></li>
             <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
             <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>
+            <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
             <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
             <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
         </ul>
