--- a/wine/src/main/resources/templates/admin/home.html
+++ b/wine/src/main/resources/templates/admin/home.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="card produtos-container box" style="width: 18rem;">
-    <img th:src="@{/admin/images/avatar.png}" class="card-img-top" alt="...">
+    <img th:src="@{/admin/images/P7.png}" class="card-img-top" alt="...">
     <div class="card-body">
       <a href="/produtos" class="btn btn-primary">Gerenciamento de Produtos</a>
     </div>
