--- a/wine/src/main/resources/templates/admin/edit.html
+++ b/wine/src/main/resources/templates/admin/edit.html
@@ -50,6 +50,18 @@
             <div class="invalid-feedback" th:errors="*{senha}"></div>
         </div>
         <div class="form-group">
+            <label class="form-label">Repita a Senha</label>
+            <div class="input-group">
+                <input type="password" class="form-control" th:errorclass="is-invalid" id="confirm_password" placeholder="Repita a Senha" minlength="4" th:field="*{senha}">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="show-confirm-password-toggle" >
+                        <span class="fa fa-eye-slash"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="invalid-feedback" th:errors="*{senha}"></div>
+        </div>
+        <div class="form-group">
             <label class="form-label">Grupo</label>
             <select class="form-select" th:field="*{grupo}">
                 <option th:each="grupo : ${grupos}" th:value="${grupo}" th:text="${grupo}"></option>
@@ -61,6 +73,8 @@
 </div>
 <script>
   const togglePassword = document.querySelector('#show-password-toggle');
+  const toggleConfirmPassword = document.querySelector('#show-confirm-password-toggle');
+  const confirmPasswordInput = document.querySelector('input[type="password"]');
   const passwordInput = document.querySelector('input[type="password"]');
 
   togglePassword.addEventListener('click', function (e) {
@@ -72,6 +86,20 @@
     this.querySelector('.fa').classList.toggle('fa-eye-slash');
     this.querySelector('.fa').classList.toggle('fa-eye');
   });
+
+  var password = document.getElementById("password")
+  , confirm_password = document.getElementById("confirm_password");
+
+function validatePassword(){
+  if(password.value != confirm_password.value) {
+    confirm_password.setCustomValidity("Senhas diferentes!");
+  } else {
+    confirm_password.setCustomValidity('');
+  }
+}
+
+password.onchange = validatePassword;
+confirm_password.onkeyup = validatePassword;
 </script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
