--- a/wine/src/main/resources/static/admin/css/style.css
+++ b/wine/src/main/resources/static/admin/css/style.css
@@ -142,7 +142,7 @@ search-box input::placeholder{
     width: 100%;
     min-height: 740px;
     display: grid;
-    align-items:center;
+    align-items: center;
     grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
     gap: 1.5rem;
     background: var(--bg-color);
@@ -301,7 +301,7 @@ margin-top: 60px;
     margin-top: 100px;
 }
 .categoria-container .img{
-width: 100%;
+   width: 100%;
    height: px;
    object-fit: contain;
    object-position: center;
@@ -410,4 +410,8 @@ color: var(--bg-color);
     .login img {
         width: 45px;
         height: auto;
+    }
+    .container-ger{
+    container-grid: auto;
+
     }
