--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -14,10 +14,10 @@
     <i class='bx bx-menu' id="menu-icon"></i>
     <div class="container">
         <ul class="navbar">
-<!--            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>-->
+            <!--<li class="nav-item"><a class="nav-link" href="/">Home</a></li>-->
             <li class="nav-item"><a class="nav-link" href="/loja">Loja</a></li>
             <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-            <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>
+           <!-- <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>-->
             <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
             <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
             <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
