--- a/wine/src/main/resources/templates/admin/indexProduto.html
+++ b/wine/src/main/resources/templates/admin/indexProduto.html
@@ -21,11 +21,12 @@
         <tr>
           <th scope="col">COD</th>
           <th scope="col">Nome</th>
-          <th scope="col">Tipo</th>
-          <th scope="col">Avaliação</th>
-<!--          <th scope="col">Descrição</th>-->
           <th scope="col">Qtde</th>
-          <th scope="col">Preço R$</th>
+          <th scope="col">Tipo</th>
+          <th scope="col">PreçoR$</th>
+          <th scope="col">Situação</th>
+         <!-- <th scope="col">Avaliação</th>
+<!--          <th scope="col">Descrição</th>-->
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -35,11 +36,11 @@
         <tr th:each="produto : ${produtos}">
           <th class="col-1" scope="row" th:text="${produto.getCodigo()}">#</th>
           <td class="col-2" th:text="${produto.nome}">#</td>
-          <td class="col-2" th:text="${produto.tipo.toString()}">#</td>
-          <td class="col-2" th:text="${produto.avaliacao}">#</td>
+          <td class="col-3" th:text="${produto.quantidade}">#</td>
+          <td class="col-4" th:text="${produto.tipo.toString()}">#</td>
+          <td class="col-5" th:text="${produto.preco}">#</td>
+          <td class="col-6" th:text="${produto.situacao}">#</td>
 <!--          <td class="col-2" th:text="${produto.descricao}">#</td>-->
-          <td class="col-4" th:text="${produto.quantidade}">#</td>
-          <td class="col-4" th:text="${produto.preco}">#</td>
           <td class="col-1">
             <form th:if="${produto.situacao.toString() == 'ATIVO'}"
                   action="#" th:action="@{/produtos/__${produto.codigo}__/inativar}" method="get"
@@ -49,18 +50,18 @@
             <form th:if="${produto.situacao.toString() == 'INATIVO'}"
                   action="#" th:action="@{/produtos/__${produto.codigo}__/ativar}" method="get"
                   onsubmit="return confirm('Tem certeza que deseja ativar o produto?')">
-              <button type="submit" class="btn btn-link">Ativar</button>
+              <button type="submit" class="btn btn">Ativar</button>
             </form>
           </td>
           <td class="col-1">
             <form action="#" th:action="@{/produtos/__${produto.codigo}__/edit}" method="get">
-              <button type="submit" class="btn btn-link">Editar</button>
+              <button type="submit" class="btn btn">Alterar</button>
             </form>
           </td>
           </td>
           <td class="col-1">
             <form action="#" th:action="@{/produtos/__${produto.codigo}__/produto-detail}" method="get">
-              <button type="submit" class="btn btn-link">Detalhes</button>
+              <button type="submit" class="btn btn">Visualizar</button>
             </form>
           </td>
           <td class="col-1">
@@ -73,7 +74,7 @@
   <div class="row">
     <!--    <a href="/produtos/novo-produto">Novo produto</a>-->
     <form action="#" th:action="@{/produtos/novo-produto}" method="get">
-      <button type="submit" class="btn btn-link">Adicionar produto</button>
+      <button type="submit" class="btn btn">+</button>
     </form>
   </div>
 </div>
