--- a/wine/src/main/resources/templates/admin/loja.html
+++ b/wine/src/main/resources/templates/admin/loja.html
@@ -98,7 +98,7 @@
             <i class='bx bxs-cart-add'></i>
         </div>
     </div>
-</section>
+<!--</section>
 <section class="categoria" id="categoria">
     <div class="heading">
         <h2>Categoria de Vinhos</h2>
@@ -119,7 +119,7 @@
         <h2>Vinho Rosé</h2>
     </div>
     </div>
-</section>
+</section> -->
 <section class="newlettert">
     <h2>Inscreva-se para receber um especial<br>Desconto</h2>
     <form action="">
