Ajuste nas colunas tela produtos.

--- a/wine/src/main/resources/templates/admin/indexProduto.html
+++ b/wine/src/main/resources/templates/admin/indexProduto.html
@@ -22,11 +22,11 @@
           <th scope="col">COD</th>
           <th scope="col">Nome</th>
           <th scope="col">Qtde</th>
-          <th scope="col">Tipo</th>
+<!--      <th scope="col">Tipo</th> -->
           <th scope="col">PreçoR$</th>
-          <th scope="col">Situação</th>
-         <!-- <th scope="col">Avaliação</th>
-<!--          <th scope="col">Descrição</th>-->
+          <th scope="col">Status</th>
+<!--      <th scope="col">Avaliação</th> -->
+<!--      <th scope="col">Descrição</th>-->
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -37,7 +37,7 @@
           <th class="col-1" scope="row" th:text="${produto.getCodigo()}">#</th>
           <td class="col-2" th:text="${produto.nome}">#</td>
           <td class="col-3" th:text="${produto.quantidade}">#</td>
-          <td class="col-4" th:text="${produto.tipo.toString()}">#</td>
+<!--          <td class="col-4" th:text="${produto.tipo.toString()}">#</td> -->
           <td class="col-5" th:text="${produto.preco}">#</td>
           <td class="col-6" th:text="${produto.situacao}">#</td>
 <!--          <td class="col-2" th:text="${produto.descricao}">#</td>-->
