Ajuste das listas (produto e cliente/usuario)

--- a/wine/src/main/resources/templates/admin/home.html
+++ b/wine/src/main/resources/templates/admin/home.html
@@ -11,12 +11,12 @@
   <div class="container-ger">
     <img th:src="@{/admin/images/ger-produto.png}" class="card-img" alt="..." style="width: 15rem">
     <div class="card-body">
-          <a href="/produtos" class="btn btn-primary">Gerenciamento de Produtos</a>
+          <a href="/produtos" class="btn btn-primary">Lista de produtos</a>
       </div>
       <div class="container-ger">
         <img th:src="@{/admin/images/ger-usuario.png}" class="card-img" alt="..." style="width: 15rem">
         <div class="card-body">
-          <a href="/usuarios" class="btn btn-primary">Gerenciamento de Usuarios</a>
+          <a href="/usuarios" class="btn btn-primary">Lista de Usuarios</a>
         </div>
       </div>
     </div>
