--- a/wine/src/main/resources/templates/admin/paginado.html
+++ b/wine/src/main/resources/templates/admin/paginado.html
@@ -38,3 +38,4 @@
     <span>Página atual: <span th:text="${paginaAtual}+1"></span></span>
     <br>
     <span>Total de páginas: <span th:text="${totalPaginas}"></span></span>
+</div>
